<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".DoctorsDetail">

    <TextView
        android:id="@+id/doctor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="10dp"
        android:text="@string/doctor_title"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/doc_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/doc"
        android:contentDescription="@string/todo8" />

    <TextView
        android:id="@+id/doc_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="380dp"
        android:layout_marginRight="10dp"
        android:text="@string/doc_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/doc_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="440dp"
        android:layout_marginRight="10dp"
        android:text="@string/doc_degree"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/doc_appoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="520dp"
            android:layout_weight="1"
            android:text="@string/btn_appointment"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/doc_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="520dp"
            android:layout_weight="1"
            android:text="@string/btn_location"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</FrameLayout>