<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffeb3b"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/logo"
        android:foregroundGravity="clip_horizontal"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/Welcome_Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:foregroundGravity="clip_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/welcome_text"
        android:textColor="#9C27B0"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btn_Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:foregroundGravity="clip_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/btn_continue"
        android:textSize="24sp" />
</LinearLayout>
